src/snapshots/glass__codegen_tests__elm_runtime_jass_snapshot.snap
---
source: src/codegen_tests.rs
expression: output
---
// ========== Glass Elm Runtime Functions ==========

function glass_rt_tuple_0 takes integer tid returns integer
    return glass_Tuple2_integer_integer_Tuple2_integer_integer__0[tid]
endfunction

function glass_rt_tuple_1 takes integer tid returns integer
    return glass_Tuple2_integer_integer_Tuple2_integer_integer__1[tid]
endfunction

function glass_dispatch_update takes nothing returns integer
    return glass_update(glass_model, glass_msg_tag)
endfunction

function glass_timer_callback takes nothing returns nothing
    local timer t = GetExpiredTimer()
    local integer hid = GetHandleId(t)
    local integer closure_id = LoadInteger(glass_timer_ht, hid, 0)
    local integer cb_type = LoadInteger(glass_timer_ht, hid, 2)
    local unit cb_unit = LoadUnitHandle(glass_timer_ht, hid, 1)
    local integer msg_result = 0
    local integer glass_result
    local integer glass_effects
    local integer current
    local integer fx_id
    local integer fx_tag
    local timer t2
    local unit u
    local effect sfx
    local texttag tt
    local sound snd
    local integer row_count
    local integer row_cur
    local integer row_data
    local multiboarditem mbi
    local integer ri
    if cb_type == 1 then
        set msg_result = glass_dispatch_1_unit(closure_id, cb_unit)
    elseif cb_type == 2 then
        set current = glass_dispatch_void(closure_id)
    elseif cb_type == 3 then
        set current = glass_dispatch_1_unit(closure_id, cb_unit)
    else
        set msg_result = glass_dispatch_void(closure_id)
    endif
    call FlushChildHashtable(glass_timer_ht, hid)
    call DestroyTimer(t)
    set t = null
    set cb_unit = null
    if cb_type < 2 then
        set glass_msg_tag = msg_result
        set glass_result = glass_dispatch_update()
        set glass_model = glass_rt_tuple_0(glass_result)
        set glass_effects = glass_rt_tuple_1(glass_result)
        set current = glass_effects
    endif
    loop
        exitwhen current == -1
        set fx_id = glass_List_integer_head[current]
        set fx_tag = glass_Effect_tag[fx_id]
        call glass_Effect_dealloc(fx_id)
        set current = glass_List_integer_tail[current]
    endloop
endfunction

function glass_exec_effect takes integer fx_id returns nothing
    local integer fx_tag = glass_Effect_tag[fx_id]
    local timer t
    local unit u
    local effect sfx
    local texttag tt
    local sound snd
    local integer row_count
    local integer row_cur
    local integer row_data
    local multiboarditem mbi
    local integer ri
    call glass_Effect_dealloc(fx_id)
endfunction

function glass_process_effects takes integer effect_list returns nothing
    local integer current = effect_list
    loop
        exitwhen current == -1
        call glass_exec_effect(glass_List_integer_head[current])
        set current = glass_List_integer_tail[current]
    endloop
endfunction

function glass_send_msg takes integer msg returns nothing
    local integer glass_result
    local integer glass_new_model
    local integer glass_effects
    set glass_msg_tag = msg
    set glass_result = glass_dispatch_update()
    set glass_new_model = glass_rt_tuple_0(glass_result)
    set glass_effects = glass_rt_tuple_1(glass_result)
    set glass_model = glass_new_model
    call glass_process_effects(glass_effects)
endfunction

function glass_runtime_init takes nothing returns nothing
    local integer glass_result
    local integer glass_effects
    set glass_timer_ht = InitHashtable()
    set glass_result = glass_init()
    set glass_model = glass_rt_tuple_0(glass_result)
    set glass_effects = glass_rt_tuple_1(glass_result)
    call glass_process_effects(glass_effects)
endfunction

function InitTrig_GlassInit takes nothing returns nothing
    local trigger t = CreateTrigger()
    call TriggerRegisterTimerEvent(t, 0.00, false)
    call TriggerAddAction(t, function glass_runtime_init)
endfunction
