src/snapshots/glass__codegen_tests__elm_runtime_lua_with_subs_snapshot.snap
---
source: src/codegen_tests.rs
expression: output
---
-- ========== Glass Elm Runtime ==========

local glass_model = nil
local glass_timer_ht = nil
local glass_multiboard = nil
local glass_active_subs = {}

function glass_exec_effect(fx)
end

function glass_process_effects(effect_list)
    local current = effect_list
    while current ~= nil do
        glass_exec_effect(current.head)
        current = current.tail
    end
end

function glass_send_msg(msg)
    local result = glass_update(glass_model, msg)
    glass_model = result[1]
    glass_process_effects(result[2])
    glass_reconcile_subs(glass_subscriptions(glass_model))
end

function glass_register_one_sub(sub, key)
    local handler = sub.handler
    if sub.tag == glass_TAG_Subscription_OnAttack then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_ATTACKED, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetAttacker(), GetTriggerUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnDeath then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_DEATH, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetKillingUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnTimer then
        local t = CreateTimer()
        TimerStart(t, sub.interval, true, function()
            glass_send_msg(handler())
        end)
        glass_active_subs[key] = { handle = t, kind = "timer" }
    elseif sub.tag == glass_TAG_Subscription_OnSpellEffect then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SPELL_EFFECT, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetSpellAbilityId(), GetSpellTargetUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnItemPickup then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_PICKUP_ITEM, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetItemTypeId(GetManipulatedItem())))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnSpellCast then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SPELL_CAST, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetSpellAbilityId()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnSpellChannel then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SPELL_CHANNEL, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetSpellAbilityId()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnDamage then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_DAMAGED, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetEventDamageSource(), GetTriggerUnit(), GetEventDamage()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnItemUse then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_USE_ITEM, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetItemTypeId(GetManipulatedItem())))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnItemDrop then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_DROP_ITEM, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetItemTypeId(GetManipulatedItem())))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnChat then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerChatEvent(t, Player(i), "", false)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetPlayerId(GetTriggerPlayer()), GetEventPlayerChatString()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnPlayerLeave then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerEvent(t, Player(i), EVENT_PLAYER_LEAVE)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetPlayerId(GetTriggerPlayer())))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnHeroLevelUp then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_HERO_LEVEL, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnConstructionFinish then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_CONSTRUCT_FINISH, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnSpellGround then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SPELL_EFFECT, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetSpellAbilityId(), GetSpellTargetX(), GetSpellTargetY()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnSummon then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SUMMON, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetSummonedUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnUnitSold then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SELL, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetSoldUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnItemSold then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SELL_ITEM, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetItemTypeId(GetSoldItem())))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnUnitTrained then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_TRAIN_FINISH, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetTrainedUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnResearchFinish then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_RESEARCH_FINISH, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetResearched()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnConstructionStart then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_CONSTRUCT_START, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnSpellFinish then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_SPELL_FINISH, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetSpellAbilityId()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    elseif sub.tag == glass_TAG_Subscription_OnOrderIssued then
        local t = CreateTrigger()
        for i = 0, bj_MAX_PLAYER_SLOTS - 1 do
            TriggerRegisterPlayerUnitEvent(t, Player(i), EVENT_PLAYER_UNIT_ISSUED_ORDER, nil)
        end
        TriggerAddAction(t, function()
            glass_send_msg(handler(GetTriggerUnit(), GetIssuedOrderId()))
        end)
        glass_active_subs[key] = { handle = t, kind = "trigger" }
    end
end

function glass_unregister_one_sub(key)
    local entry = glass_active_subs[key]
    if entry ~= nil then
        if entry.kind == "timer" then
            PauseTimer(entry.handle)
            DestroyTimer(entry.handle)
        else
            DisableTrigger(entry.handle)
            DestroyTrigger(entry.handle)
        end
        glass_active_subs[key] = nil
    end
end

function glass_reconcile_subs(new_subs)
    local new_keys = {}
    local current = new_subs
    local idx = 0
    while current ~= nil do
        local sub = current.head
        local key = tostring(sub.tag) .. "_" .. tostring(idx)
        new_keys[key] = sub
        idx = idx + 1
        current = current.tail
    end
    for key, _ in pairs(glass_active_subs) do
        if new_keys[key] == nil then
            glass_unregister_one_sub(key)
        end
    end
    for key, sub in pairs(new_keys) do
        if glass_active_subs[key] == nil then
            glass_register_one_sub(sub, key)
        end
    end
end

function glass_runtime_init()
    glass_timer_ht = InitHashtable()
    local result = glass_init()
    glass_model = result[1]
    glass_process_effects(result[2])
    glass_reconcile_subs(glass_subscriptions(glass_model))
end

do
    local t = CreateTrigger()
    TriggerRegisterTimerEvent(t, 0.00, false)
    TriggerAddAction(t, glass_runtime_init)
end
