src/snapshots/glass__codegen_tests__enum_def.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // SoA arrays for type Phase
    integer array glass_Phase_tag
    integer array glass_Phase_Playing_wave
    integer array glass_Phase_Victory_winner
    integer array glass_Phase_free
    integer glass_Phase_free_top = 0
    integer glass_Phase_count = 0
    constant integer glass_TAG_Lobby = 0
    constant integer glass_TAG_Playing = 1
    constant integer glass_TAG_Victory = 2
endglobals

function glass_Phase_alloc takes nothing returns integer
    local integer id
    if glass_Phase_free_top > 0 then
        set glass_Phase_free_top = glass_Phase_free_top - 1
        set id = glass_Phase_free[glass_Phase_free_top]
    else
        set glass_Phase_count = glass_Phase_count + 1
        set id = glass_Phase_count
    endif
    return id
endfunction

function glass_Phase_dealloc takes integer id returns nothing
    set glass_Phase_free[glass_Phase_free_top] = id
    set glass_Phase_free_top = glass_Phase_free_top + 1
endfunction

function glass_new_Lobby takes nothing returns integer
    local integer id = glass_Phase_alloc()
    set glass_Phase_tag[id] = 0
    return id
endfunction

function glass_new_Playing takes integer p_wave returns integer
    local integer id = glass_Phase_alloc()
    set glass_Phase_tag[id] = 1
    set glass_Phase_Playing_wave [id] = p_wave
    return id
endfunction

function glass_new_Victory takes integer p_winner returns integer
    local integer id = glass_Phase_alloc()
    set glass_Phase_tag[id] = 2
    set glass_Phase_Victory_winner [id] = p_winner
    return id
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction


function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

local glass_TAG_Lobby = 0
local glass_TAG_Playing = 1
local glass_TAG_Victory = 2
