src/snapshots/glass__codegen_tests__extend_multiple_methods.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_Int_doubled takes integer self returns integer
    return (self + self)
endfunction
function glass_Int_is_positive takes integer self returns boolean
    return (self > 0)
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_Int_doubled(self)
    return (self + self)
end
function glass_Int_is_positive(self)
    return (self > 0)
end
