src/snapshots/glass__codegen_tests__extend_self_usage.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_Int_add_to takes integer self, integer other returns integer
    return (self + other)
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_Int_add_to(self, other)
    return (self + other)
end
