src/snapshots/glass__codegen_tests__function_call.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_double takes integer x returns integer
    return glass_dispatch_2(add, x, x)
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_double(x)
    return add(x, x)
end
